Sound implementation and other fixes
Audio
 Added test sounds from before rewrite.
 Added Audio Editor/Viewer to Emotion.Tools
 Added an AudioContext object accessible through Engine.Host.Platform.Audio
 Added an AudioDevice representitive object.
 Added a basic WasApi implementation.
 Added COM interop classes for WasApi.
 Added channel, sample size, and sample rate conversion functions.

Other
 Moved Thanks file from before rewrite.
 Added camera speed controls to the Map Editor
 Fixed a crash with the TileMap when a non .tmx file is provided to it. (or an invalid such file)
 The shader factory attempts will now be logged as traces.
 Style fixes to the NtDll, Shell32, and SynchApi wrappers.
 Applied code style to the Win32Platform.

--- a/Todo.txt
+++ b/Todo.txt
@@ -46,3 +46,5 @@ Meta
 	- Autobuild nuget package, with version patching, and commit hash patching
 Input
 	- Controller Support (Wherever possible)
+Audio
+	- Introduce some kind of "AudioFormat" class/struct to reduce passing of sampleRate, bitsPerSample, isFloat, and channels together.
