--- a/Todo.txt
+++ b/Todo.txt
@@ -48,3 +48,4 @@ Input
 	- Controller Support (Wherever possible)
 Audio
 	- Introduce some kind of "AudioFormat" class/struct to reduce passing of sampleRate, bitsPerSample, isFloat, and channels together.
+	- Move conversion logic and generic audio stuff to Emotion.Standard.Audio
