--- a/Todo.txt
+++ b/Todo.txt
@@ -4,15 +4,17 @@ Commands
 	- Merge state changing commands one after another into one.
 GL
 	- Investigate why the VertexArrayObject binding cache doesn't work. Maybe VertexArrayBinding isn't the right value?
+	- Some kind of shared cache buffer for commands rather than the pool which exists now.
 Rendering
-	- Add state changes test
+	- Add tests for state changes
 Standard.Image
-	- PNG: Make the conversion to 32bpp little endian and the inverting in place when encoding the data rather than at the start.
 	- Implement ByteWriter and use it to encode the images.
 	- JPEG Support
 	- Add tests for image encoding
 Logging
 	- Filtering
+	- Shaking off dependencies
+	- Hooking up a network loggers for certain levels (errors) and sources (engine, game)
 Standard.Text
 	- Improve the CFF dictionary parsing with a class with annotations instead of the dictionary hell happening there.
 	- WOFF table parsing (and whatever else is needed for it to be supported)
@@ -30,8 +32,11 @@ Standard.Text
 	- RenderGlyph, "e" variable resizing is not really needed.
 	- There are some weird artifacts when rendering certain glyphs. This can be reproduced with a size 39 of the Junction-Regular font.
 	- Add tests for MeasureString and fix broken stuff there.
+	- Test out the subsampling of the stb rasterizer.
 Emotion.Test
 	- Derivation checks shouldn't straight out check if the components are equal, but rather compare the difference to an epsilon as some drivers round colors differently
+	- Test functions which are run at the start and end of a class.
+	- Use a custom loop rather than the FrameByFrame hack.
 Documentation
 	- Finish the documentation :D
 Game Logic
@@ -44,8 +49,14 @@ Platform
 	- Linux
 	- Android
 	- Web
+	- Implement the InputManager in the PlatformBase itself
 Meta
 	- Nuget Package
 	- Autobuild nuget package, with version patching, and commit hash patching
 Input
 	- Controller Support (Wherever possible)
+Engine
+	- Custom loop support - will be needed for some platforms
+	- Configurator granularity - set host size without setting other host settings, for example
+Emotion.Game
+	- Bound box for the tile map - used to calculate only visible tiles and map only them.
