--- a/Todo.txt
+++ b/Todo.txt
@@ -12,7 +12,6 @@ Rendering
 	- Add tests for state changes
 	- Add tests for various batch stuff
 	- Uniform blocks (UBO) for syncing shaders
-	- It should be easier to create a custom VertexData structure and upload that in a batch
 	- When the barch memory is dirty, don't upload all of it. Just the part that's updated. Replace "_upload" will some kind of min-max indices.
 Standard.Image
 	- Implement ByteWriter and use it to encode the images.
@@ -44,27 +43,22 @@ Emotion.Test
 	- Derivation checks shouldn't straight out check if the components are equal, but rather compare the difference to an epsilon as some drivers round colors differently
 	- Test functions which are run at the start and end of a class.
 	- Use a custom loop rather than the FrameByFrame hack.
-	- Some kind of multi-thread function to relieve the StandardAudio tests for example.
 Documentation
 	- Finish the documentation :D
 Game Logic
 	- UI with scaling and some kind of event capturing/focus system
 	- Add RichText tests
 Platform
-	- Currently a PlatformConfig is passed to the PlatformLoader. This can be replaced by the Configuration used by the engine as currently it just copies properties from there.
-	- Windows Sound
 	- Mac
 	- Linux
 	- Android
 	- Web
-	- Implement the InputManager in the PlatformBase itself
-	- Cleanup on InitConfig and PlatformConfig
-	- Cleanup on PlatformBase
 Meta
 	- Nuget Package
 	- Autobuild nuget package, with version patching, and commit hash patching
 Input
 	- Controller Support (Wherever possible)
+	- Sometimes mouse down is not reported correctly by IsMouseKeyDown. The events are correct, but something else is causing this. Most easily reproducible after going into full screen (or moving the window). Could be Win32.
 Engine
 	- Custom loop support - will be needed for some platforms
 	- Configurator granularity - set host size without setting other host settings, for example
