Added the ParallelWork class to easy operation splitting. Glyf table parsing is now multithreaded.

--- a/Todo.txt
+++ b/Todo.txt
@@ -32,13 +32,13 @@ Standard.Text
 	- GPos table
 	- FVar table
 	- Meta table
-	- Improve Glyf glyph parsing. Currently it cannot be multi-threaded because of the composite parts. Maybe it should be done in two passes.
 	- Long Term: Implement the FreeType rasterizer.
 	- Glyf: No contour error handling
 	- RenderGlyph, "e" variable resizing is not really needed.
 	- There are some weird artifacts when rendering certain glyphs. This can be reproduced with a size 39 of the Junction-Regular font.
 	- Add tests for MeasureString and fix broken stuff there.
 	- Test out the subsampling of the stb rasterizer.
+	- Implement the custom renderer you've been thinking of, wink
 Emotion.Test
 	- Derivation checks shouldn't straight out check if the components are equal, but rather compare the difference to an epsilon as some drivers round colors differently
 	- Test functions which are run at the start and end of a class.
