Configuration Refactor, Custom Loops, Variable Loop Speed
Refactored the way the configuration is setup from a "AspNet like builder" to an object with properties.
Added the ability to specify a custom game loop.
The default game loop will now run twice as fast or up to four times as slow if it cannot keep up. This is configurable.
Moved VSync option to the Renderer and ForcedVSync to it.
Added Reported DeltaTime to the PerformanceMonitor.
Emotion.Test now uses a custom loop.
FullScale is now the default scaling mode. The letter/pillarbox mode is called ScaleBlackBars.
Moved RenderDocAPI to its own file.
Added a property to the SceneManager for whether it is currently on the loading screen.

--- a/Todo.txt
+++ b/Todo.txt
@@ -5,14 +5,15 @@ DataBuffer.CreateMapper
 	- Only the data that needs mapping should be downloaded from the GPU. Currently the whole range is being downloaded. Additionally maybe internally it should be held in a byte span.
 Commands
 	- Merge state changing commands one after another into one.
+	- Some kind of shared cache buffer for commands rather than the pool which exists now.
+	- Maybe get rid of commands?
 GL
 	- Investigate why the VertexArrayObject binding cache doesn't work. Maybe VertexArrayBinding isn't the right value?
-	- Some kind of shared cache buffer for commands rather than the pool which exists now.
 Rendering
 	- Add tests for state changes
 	- Add tests for various batch stuff
 	- Uniform blocks (UBO) for syncing shaders
-	- When the barch memory is dirty, don't upload all of it. Just the part that's updated. Replace "_upload" will some kind of min-max indices.
+	- When the batch memory is dirty, don't upload all of it. Just the part that's updated. Replace "_upload" will some kind of min-max indices.
 Standard.Image
 	- Implement ByteWriter and use it to encode the images.
 	- JPEG Support
@@ -42,7 +43,6 @@ Standard.Text
 Emotion.Test
 	- Derivation checks shouldn't straight out check if the components are equal, but rather compare the difference to an epsilon as some drivers round colors differently
 	- Test functions which are run at the start and end of a class.
-	- Use a custom loop rather than the FrameByFrame hack.
 Documentation
 	- Finish the documentation :D
 Game Logic
@@ -58,9 +58,6 @@ Meta
 	- Autobuild nuget package, with version patching, and commit hash patching
 Input
 	- Controller Support (Wherever possible)
-Engine
-	- Custom loop support - will be needed for some platforms
-	- Configurator granularity - set host size without setting other host settings, for example
 Emotion.Game
 	- Bound box for the tile map - used to calculate only visible tiles and map only them.
 Tools
